--- a/public/stylesheet/user/product.css
+++ b/public/stylesheet/user/product.css
@@ -93,27 +93,17 @@ nav a {
 /* Zoom Lens Effect */
 .zoom-lens {
     position: absolute;
-    width: 100px;
-    height: 100px;
-    background: rgba(0, 0, 0, 0.2);
-    border: 1px solid var(--border-color);
-    border-radius: 50%;
+    width: 40%;   
+    height: 50%;
+    border-radius: 5%;
+    border: 2px solid var(--border-color);
     pointer-events: none;
-    display: none;
+    opacity: 0; 
+    background-repeat: no-repeat;
+    background-size: 200%;
+    background-position: center;
 }
 
-.zoom-result {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    border: 1px solid var(--border-color);
-    border-radius: 8px;
-    background-repeat: no-repeat;
-    display: none;
-    z-index: 10;
-    top: 0;
-    right: -220px;
-}
 
 .product-info {
     flex: 1;
@@ -267,12 +257,14 @@ nav a {
 }
 
 .product-card {
-    flex: 0 0 200px; /* Fixed width for each card */
+    flex: 0 0 200px; 
     border: 1px solid var(--border-color);
     border-radius: 8px;
     padding: 15px;
     text-align: center;
     transition: transform 0.3s;
+    cursor: pointer;
+    margin-top: 5px;
 }
 
 .product-card:hover {
@@ -296,6 +288,46 @@ nav a {
     color: var(--accent-color);
     margin-bottom: 5px;
 }
+
+.product-name {
+  width: 180px; /* match your card width */
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+}
+
+.product-name span {
+  display: inline-block;
+  transition: transform 5s linear; /* smooth sliding */
+}
+
+/* Slide when hovered */
+.product-name.scrollable:hover span {
+  transform: translateX(-90%);
+}
+
+
+/*Related Price & Offer */
+.relatedprice .current {
+    font-size: 1em;
+    color: var(--accent-color);
+    /* font-weight: bold; */
+}
+
+.relatedprice .original {
+    text-decoration: line-through;
+    color: #666;
+    margin-left: 10px;
+}
+
+.relatedprice .offer {
+    color: var(--accent-color);
+    /* color: white; */
+    padding: 2px 8px;
+    border-radius: 4px;
+    font-size: 0.9em;
+}
+
 
 .product-card .rating {
     font-size: 0.9em;
