--- a/public/stylesheet/user/wallet.css
+++ b/public/stylesheet/user/wallet.css
@@ -30,7 +30,6 @@ a {
 
 /* Container */
 .container {
-    /* max-width: 1200px; */
     padding: 0 30px 20px;
 }
 
@@ -38,7 +37,6 @@ a {
 .breadcrumb {
     display: flex;
     align-items: center;
-    /* margin-bottom: 30px; */
     padding: 20px 0;
 }
 
@@ -317,6 +315,71 @@ a {
 .empty-state-submessage {
     font-size: 14px;
     opacity: 0.7;
+}
+
+ /* Pagination */
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+ /* .pagination-btn {
+    padding: 8px 12px;
+    border: 1px solid #ddd;
+    background: white;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+ .pagination-btn.active {
+    background-color: #e67e22;
+    color: white;
+    border-color: #e67e22;
+}
+
+ .pagination-numbers {
+    display: flex;
+    gap: 5px;
+} */
+
+.pagination-controls{
+    display: flex;
+}
+
+.pagination {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 30px;
+    gap: 10px;
+}
+
+.pagination button {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--border-color);
+    background-color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.pagination button:hover {
+    border-color: var(--primary-color);
+    color: var(--primary-color);
+}
+
+.pagination .active {
+    /* background-color: var(--primary-color); */
+    /* color: #fff; */
+    color: var(--primary-color);
+    border-color: var(--primary-color);
 }
 
 /* Responsive Design */
